# Homeworks-and-others

./: .gitignore  README.md
First Year/Semester 1/Fundamentals of Programming/A1/: p1.py  p2.py  p3.py
First Year/Semester 1/Fundamentals of Programming/A10/: GUI.py  settings.properties
First Year/Semester 1/Fundamentals of Programming/A11/: domain.py  gui.py  service.py  tests.py  ui.py
First Year/Semester 1/Fundamentals of Programming/A12/: bkt-recursive.py  bkt_iterative.py
First Year/Semester 1/Fundamentals of Programming/A2/: program.py
First Year/Semester 1/Fundamentals of Programming/A3/: program.py
First Year/Semester 1/Fundamentals of Programming/A4/: start.py
First Year/Semester 1/Fundamentals of Programming/A5/: main.py
First Year/Semester 1/Fundamentals of Programming/A678/: GUI.py  guistart.py  start.py
First Year/Semester 1/Fundamentals of Programming/A9/: GUI.py  exceptions.py  settings.properties  start.py
First Year/Semester 2/Data Structures and Algorithms/Map/: ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp
First Year/Semester 2/Object Oriented Programming/Exam/Practical/Template/: CMakeLists.txt  main.cpp
First Year/Semester 2/Object Oriented Programming/Exam/Practical/Template/domain/: Domain.cpp  Domain.h
First Year/Semester 2/Object Oriented Programming/Exam/Practical/Template/gui/: GUI.cpp  GUI.h
First Year/Semester 2/Object Oriented Programming/Exam/Practical/Template/repository/: Repository.cpp  Repository.h
First Year/Semester 2/Object Oriented Programming/Exam/Practical/Template/service/: Service.cpp  Service.h
First Year/Semester 2/Object Oriented Programming/Third Test/Vegetables/: CMakeLists.txt  input.txt  main.cpp
First Year/Semester 2/Object Oriented Programming/Third Test/Vegetables/Domain/: Domain.cpp  Domain.h
First Year/Semester 2/Object Oriented Programming/Third Test/Vegetables/GUI/: GUI.cpp  GUI.h
First Year/Semester 2/Object Oriented Programming/Third Test/Vegetables/Repository/: Repository.cpp  Repository.h
First Year/Semester 2/Object Oriented Programming/Third Test/Vegetables/Service/: Service.cpp  Service.h
Second Year/Semester 1/Databases/A5/: A5.sql
Second Year/Semester 2/Web Programming/: README.md
Third Year/Semester 2/Numerical Calculus/: Lab1.m  Lab2.m  Lab6.m
(+1132 files in other folders)
